--- a/VideoRender/VideoRender.vcxproj
+++ b/VideoRender/VideoRender.vcxproj
@@ -185,7 +185,7 @@
     <ClInclude Include="RenderGDI.h" />
     <ClInclude Include="RenderSDL.h" />
     <ClInclude Include="Resource.h" />
-    <ClInclude Include="SingletonTem.h" />
+    <ClInclude Include="SingletonImpl.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="videoFile.h" />
