--- a/VideoRender/VideoRender.vcxproj
+++ b/VideoRender/VideoRender.vcxproj
@@ -179,6 +179,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="VideoConv.h" />
     <ClInclude Include="Lock.h" />
     <ClInclude Include="RenderD2d.h" />
     <ClInclude Include="RenderD3d.h" />
@@ -196,6 +197,7 @@
     <ClInclude Include="videosubscribe.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="VideoConv.cpp" />
     <ClCompile Include="Lock.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
